objects/Release_Product__c.object
<CustomObject>
    <description>Products Included in Releases</description>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CPM_ID__c</fullName>
        <label>Product CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Release Products</relationshipLabel>
        <relationshipName>Release_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_CPM_ID__c</fullName>
        <label>Release CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Release Products</relationshipLabel>
        <relationshipName>Release_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Release Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Release__c</columns>
        <columns>Version__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Release Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>